# slight-misspeller

./: .gitignore  RADME.md  READEM.md  README.md  ROADME.md  misspell.py  settings.ini  setup.cfg
data/: READEM.md  ROADME.md  rules.ini
slight-misspeller/: misspell.py
slight-misspeller/data/: rules.ini
