[metadata]
name = slight-misspeller
version = 1.0.3
author = Adam Rumpf
author_email = arumpf@floridapoly.edu
description = A Python module that generates slightly misspelled versions of text files.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/adam-rumpf/slight-misspeller
project_urls =
    Source = https://github.com/adam-rumpf/slight-misspeller
    Bug Tracker = https://github.com/adam-rumpf/slight-misspeller/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Text Processing
    Natural Language :: English
keywords = language, text, joke program

[options.entry_points]
console_scripts =
    misspell = slight-misspeller.misspell:main
